add temporary metric measures

--- a/advectionDiffusion/QuantumD1Q3SVSampling.ipynb
+++ b/advectionDiffusion/QuantumD1Q3SVSampling.ipynb
@@ -460,7 +460,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "id": "6e3c2902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percent_difference(experimental, expected):\n",
+    "    if experimental.size != expected.size:\n",
+    "        print(f\"Different sizes {experimental.size} and {expected.size}, going with smallest array.\")\n",
+    "\n",
+    "    k = min(experimental.size, expected.size)\n",
+    "    out = np.zeros(k)\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        # calculate percent error\n",
+    "        pd = -1\n",
+    "        if expected[i] != 0:\n",
+    "            pd = 100 * (abs((experimental[i] - expected[i])) / expected[i])\n",
+    "        out[i] = pd\n",
+    "    return np.mean(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ee5dff9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rms(experimental, expected):\n",
+    "    if experimental.size != expected.size:\n",
+    "        print(f\"Different sizes {experimental.size} and {expected.size}, going with smallest array.\")\n",
+    "\n",
+    "    k = min(experimental.size, expected.size)\n",
+    "\n",
+    "    if k == 0:\n",
+    "        print(\"Can not process list of length 0.\")\n",
+    "        return 0\n",
+    "    \n",
+    "    ms = 0\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        ms += math.pow(experimental[i] - expected[i], 2)\n",
+    "\n",
+    "    return math.sqrt(ms / k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f4d34f01",
    "metadata": {
     "scrolled": false
@@ -470,18 +518,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nshots: 5, 1\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'percent_difference' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 29\u001b[0m\n\u001b[1;32m     26\u001b[0m     experimental \u001b[38;5;241m=\u001b[39m process_counts(counts)\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# calculate the percent difference\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m     pd\u001b[38;5;241m.\u001b[39mappend(\u001b[43mpercent_difference\u001b[49m(experimental, expected))\n\u001b[1;32m     30\u001b[0m     rmsd\u001b[38;5;241m.\u001b[39mappend(rms(experimental, expected))\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;66;03m# plt.plot(list(range(0,M,1)), experimental, label=f'shots=10^{j + 1}')\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \n\u001b[1;32m     34\u001b[0m \n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# save scores\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'percent_difference' is not defined"
+      "nshots: 5, 1\n",
+      "nshots: 5, 2\n",
+      "nshots: 5, 3\n",
+      "nshots: 5, 4\n"
      ]
     }
    ],
@@ -514,6 +554,7 @@
     "        experimental = process_counts(counts)\n",
     "\n",
     "        # calculate the percent difference\n",
+    "        # TODO: CONVERT THIS TO FIDELITY COMPUTATION\n",
     "        pd.append(percent_difference(experimental, expected))\n",
     "        rmsd.append(rms(experimental, expected))\n",
     "\n",
