add RMSD and PD data, add one iteration sampling code for one circuit

--- a/advectionDiffusion/QuantumD1Q3SVSampling.ipynb
+++ b/advectionDiffusion/QuantumD1Q3SVSampling.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f4d34f01",
    "metadata": {
     "scrolled": false
@@ -521,7 +521,31 @@
       "nshots: 5, 1\n",
       "nshots: 5, 2\n",
       "nshots: 5, 3\n",
-      "nshots: 5, 4\n"
+      "nshots: 5, 4\n",
+      "nshots: 5, 5\n",
+      "nshots: 5, 6\n",
+      "nshots: 5, 7\n",
+      "nshots: 6, 1\n",
+      "nshots: 6, 2\n",
+      "nshots: 6, 3\n",
+      "nshots: 6, 4\n",
+      "nshots: 6, 5\n",
+      "nshots: 6, 6\n",
+      "nshots: 6, 7\n",
+      "nshots: 7, 1\n",
+      "nshots: 7, 2\n",
+      "nshots: 7, 3\n",
+      "nshots: 7, 4\n",
+      "nshots: 7, 5\n",
+      "nshots: 7, 6\n",
+      "nshots: 7, 7\n",
+      "nshots: 8, 1\n",
+      "nshots: 8, 2\n",
+      "nshots: 8, 3\n",
+      "nshots: 8, 4\n",
+      "nshots: 8, 5\n",
+      "nshots: 8, 6\n",
+      "nshots: 8, 7\n"
      ]
     }
    ],
@@ -567,6 +591,22 @@
     "        \n",
     "    # save_fig(counts, i, 'sv')\n",
     "    SV = reinit(SV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "050f037e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n",
+    "\n",
+    "with open('data/d1q3_RMSD_vs_nshots.pkl', 'wb') as f:\n",
+    "    pkl.dump(rmsd_all_iterations, f)\n",
+    "\n",
+    "with open('data/d1q3_PD_vs_nshots.pkl', 'wb') as f:\n",
+    "    pkl.dump(pd_all_iterations, f)"
    ]
   },
   {
