--- a/advectionDiffusion/QuantumD1Q2SVSampling.ipynb
+++ b/advectionDiffusion/QuantumD1Q2SVSampling.ipynb
@@ -23,7 +23,8 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "from qiskit.visualization import plot_histogram, plot_state_city\n",
     "\n",
-    "import math"
+    "import math\n",
+    "import pickle as pkl"
    ]
   },
   {
@@ -274,6 +275,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sorts counts\n",
+    "def sort_counts(counts):\n",
+    "    keys = list(counts.keys())\n",
+    "    keys.sort()\n",
+    "    counts = {i: counts[i] for i in keys}\n",
+    "    return counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9bb64c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# sorts and converts values of counts\n",
     "def process_counts(counts):\n",
     "    keys = list(counts.keys())\n",
@@ -284,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c27d33e9",
    "metadata": {},
    "outputs": [],
@@ -301,12 +317,12 @@
     "    result = simulator.run(circ, shots=nshots).result()\n",
     "    counts = result.get_counts(circ)\n",
     "\n",
-    "    return process_counts(counts)"
+    "    return sort_counts(counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "90f5ddee",
    "metadata": {},
    "outputs": [],
@@ -327,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8fddb83d",
    "metadata": {},
    "outputs": [],
@@ -349,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3b9f516f",
    "metadata": {
     "scrolled": true
@@ -421,14 +437,28 @@
     "\n",
     "qc = oneStep(np.arccos(x),np.arccos(y))\n",
     "\n",
+    "counts_all = {}\n",
+    "\n",
     "for i in range(1, iterations):\n",
     "    print(i)\n",
     "    SV = timestep(SV)\n",
     "    counts = simulate_statevector(SV, qc)\n",
+    "    counts_all[i] = counts\n",
     "    save_fig(counts, i, 'sv')\n",
     "    # counts = simulate_statevector(SV, qc)\n",
     "    # save_fig(counts, i, 'sv')\n",
     "    SV = reinit(SV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "566cfa57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/d1q2_shot_counts.pkl', 'wb') as f:\n",
+    "    pkl.dump(counts_all, f)"
    ]
   }
  ],
