--- a/advectionDiffusion/data/D1Q2ErrorAnalysis.ipynb
+++ b/advectionDiffusion/data/D1Q2ErrorAnalysis.ipynb
@@ -25,137 +25,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'00000000': 3711, '00000001': 3738, '00000010': 3726, '00000011': 3696, '00000100': 3802, '00000101': 3654, '00000110': 3691, '00000111': 3779, '00001000': 3747, '00001001': 3679, '00001010': 3734, '00001011': 7180, '00001100': 3719, '00001101': 9593, '00001110': 3609, '00001111': 3719, '00010000': 3707, '00010001': 3852, '00010010': 3694, '00010011': 3719, '00010100': 3696, '00010101': 3770, '00010110': 3741, '00010111': 3653, '00011000': 3811, '00011001': 3786, '00011010': 3699, '00011011': 3689, '00011100': 3641, '00011101': 3726, '00011110': 3736, '00011111': 3702, '00100000': 3731, '00100001': 3754, '00100010': 3718, '00100011': 3621, '00100100': 3763, '00100101': 3686, '00100110': 3726, '00100111': 3665, '00101000': 3696, '00101001': 3823, '00101010': 3674, '00101011': 3708, '00101100': 3818, '00101101': 3706, '00101110': 3755, '00101111': 3849, '00110000': 3728, '00110001': 3707, '00110010': 3705, '00110011': 3724, '00110100': 3822, '00110101': 3796, '00110110': 3705, '00110111': 3852, '00111000': 3754, '00111001': 3826, '00111010': 3637, '00111011': 3755, '00111100': 3820, '00111101': 3698, '00111110': 3705, '00111111': 3608, '01000000': 11057, '01000001': 10859, '01000010': 11099, '01000011': 11057, '01000100': 10954, '01000101': 11043, '01000110': 11053, '01000111': 11119, '01001000': 10921, '01001001': 11015, '01001010': 11080, '01001011': 25956, '01001100': 11026, '01001101': 23595, '01001110': 11134, '01001111': 11125, '01010000': 10934, '01010001': 10914, '01010010': 11034, '01010011': 10759, '01010100': 11013, '01010101': 10914, '01010110': 11221, '01010111': 10931, '01011000': 10966, '01011001': 10910, '01011010': 10867, '01011011': 11023, '01011100': 11048, '01011101': 10966, '01011110': 10967, '01011111': 10994, '01100000': 11038, '01100001': 10724, '01100010': 11065, '01100011': 11078, '01100100': 10834, '01100101': 11118, '01100110': 11131, '01100111': 11027, '01101000': 10761, '01101001': 11002, '01101010': 11061, '01101011': 10983, '01101100': 11020, '01101101': 11051, '01101110': 10990, '01101111': 11074, '01110000': 11013, '01110001': 10766, '01110010': 11140, '01110011': 11041, '01110100': 11003, '01110101': 10959, '01110110': 11041, '01110111': 11153, '01111000': 11209, '01111001': 10990, '01111010': 10925, '01111011': 10797, '01111100': 11008, '01111101': 10868, '01111110': 10996, '01111111': 11037, '10000000': 145, '10000001': 147, '10000010': 152, '10000011': 145, '10000100': 162, '10000101': 146, '10000110': 141, '10000111': 161, '10001000': 160, '10001001': 143, '10001010': 148, '10001011': 136, '10001100': 167, '10001101': 2366, '10001110': 139, '10001111': 134, '10010000': 177, '10010001': 136, '10010010': 182, '10010011': 156, '10010100': 171, '10010101': 122, '10010110': 137, '10010111': 149, '10011000': 146, '10011001': 148, '10011010': 141, '10011011': 148, '10011100': 157, '10011101': 143, '10011110': 124, '10011111': 155, '10100000': 112, '10100001': 166, '10100010': 155, '10100011': 154, '10100100': 154, '10100101': 147, '10100110': 140, '10100111': 127, '10101000': 155, '10101001': 165, '10101010': 145, '10101011': 128, '10101100': 133, '10101101': 143, '10101110': 147, '10101111': 134, '10110000': 156, '10110001': 167, '10110010': 140, '10110011': 142, '10110100': 152, '10110101': 124, '10110110': 137, '10110111': 120, '10111000': 152, '10111001': 159, '10111010': 150, '10111011': 145, '10111100': 136, '10111101': 155, '10111110': 153, '10111111': 170, '11000000': 57, '11000001': 61, '11000010': 45, '11000011': 47, '11000100': 56, '11000101': 44, '11000110': 46, '11000111': 53, '11001000': 54, '11001001': 67, '11001010': 48, '11001011': 3975, '11001100': 53, '11001101': 1790, '11001110': 44, '11001111': 55, '11010000': 57, '11010001': 39, '11010010': 46, '11010011': 43, '11010100': 59, '11010101': 59, '11010110': 41, '11010111': 45, '11011000': 53, '11011001': 54, '11011010': 45, '11011011': 54, '11011100': 59, '11011101': 46, '11011110': 56, '11011111': 55, '11100000': 62, '11100001': 41, '11100010': 53, '11100011': 52, '11100100': 59, '11100101': 55, '11100110': 58, '11100111': 45, '11101000': 53, '11101001': 53, '11101010': 39, '11101011': 45, '11101100': 46, '11101101': 57, '11101110': 60, '11101111': 52, '11110000': 61, '11110001': 54, '11110010': 56, '11110011': 38, '11110100': 52, '11110101': 50, '11110110': 51, '11110111': 55, '11111000': 57, '11111001': 53, '11111010': 53, '11111011': 50, '11111100': 57, '11111101': 52, '11111110': 55, '11111111': 32}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for testing: only do one count at a time\n",
-    "counts = counts_all[1]\n",
-    "print(counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Statevector([0.19379882+0.j, 0.19450255+0.j, 0.1941901 +0.j,\n",
-      "             0.19340675+0.j, 0.19616057+0.j, 0.19230471+0.j,\n",
-      "             0.19327589+0.j, 0.19556634+0.j, 0.19473656+0.j,\n",
-      "             0.19296145+0.j, 0.19439845+0.j, 0.26956771+0.j,\n",
-      "             0.1940076 +0.j, 0.31158954+0.j, 0.1911169 +0.j,\n",
-      "             0.1940076 +0.j, 0.19369435+0.j, 0.19744621+0.j,\n",
-      "             0.19335442+0.j, 0.1940076 +0.j, 0.19340675+0.j,\n",
-      "             0.19533332+0.j, 0.19458059+0.j, 0.19227839+0.j,\n",
-      "             0.1963926 +0.j, 0.19574738+0.j, 0.19348523+0.j,\n",
-      "             0.19322352+0.j, 0.19196232+0.j, 0.1941901 +0.j,\n",
-      "             0.19445051+0.j, 0.19356367+0.j, 0.19432035+0.j,\n",
-      "             0.19491838+0.j, 0.19398151+0.j, 0.19143437+0.j,\n",
-      "             0.19515189+0.j, 0.19314493+0.j, 0.1941901 +0.j,\n",
-      "             0.19259395+0.j, 0.19340675+0.j, 0.19670156+0.j,\n",
-      "             0.19283028+0.j, 0.19372047+0.j, 0.19657289+0.j,\n",
-      "             0.19366822+0.j, 0.19494434+0.j, 0.1973693 +0.j,\n",
-      "             0.19424221+0.j, 0.19369435+0.j, 0.19364209+0.j,\n",
-      "             0.19413797+0.j, 0.19667583+0.j, 0.19600572+0.j,\n",
-      "             0.19364209+0.j, 0.19744621+0.j, 0.19491838+0.j,\n",
-      "             0.19677872+0.j, 0.19185685+0.j, 0.19494434+0.j,\n",
-      "             0.19662437+0.j, 0.19345907+0.j, 0.19364209+0.j,\n",
-      "             0.19109042+0.j, 0.33452171+0.j, 0.331513  +0.j,\n",
-      "             0.33515645+0.j, 0.33452171+0.j, 0.33295997+0.j,\n",
-      "             0.33430986+0.j, 0.33446119+0.j, 0.33545828+0.j,\n",
-      "             0.33245805+0.j, 0.33388576+0.j, 0.33486945+0.j,\n",
-      "             0.51253619+0.j, 0.33405244+0.j, 0.48866996+0.j,\n",
-      "             0.33568448+0.j, 0.33554878+0.j, 0.33265587+0.j,\n",
-      "             0.33235149+0.j, 0.3341736 +0.j, 0.32998303+0.j,\n",
-      "             0.33385545+0.j, 0.33235149+0.j, 0.33699343+0.j,\n",
-      "             0.33261023+0.j, 0.33314229+0.j, 0.33229058+0.j,\n",
-      "             0.3316351 +0.j, 0.33400699+0.j, 0.33438554+0.j,\n",
-      "             0.33314229+0.j, 0.33315748+0.j, 0.33356734+0.j,\n",
-      "             0.33423417+0.j, 0.32944586+0.j, 0.3346427 +0.j,\n",
-      "             0.33483923+0.j, 0.33113117+0.j, 0.3354432 +0.j,\n",
-      "             0.33563925+0.j, 0.33406759+0.j, 0.3300137 +0.j,\n",
-      "             0.33368868+0.j, 0.33458221+0.j, 0.33340042+0.j,\n",
-      "             0.33396154+0.j, 0.33443093+0.j, 0.33350665+0.j,\n",
-      "             0.33477877+0.j, 0.33385545+0.j, 0.33009036+0.j,\n",
-      "             0.33577491+0.j, 0.33427959+0.j, 0.33370384+0.j,\n",
-      "             0.33303595+0.j, 0.33427959+0.j, 0.33597078+0.j,\n",
-      "             0.33681319+0.j, 0.33350665+0.j, 0.33251893+0.j,\n",
-      "             0.33056525+0.j, 0.33377966+0.j, 0.33165036+0.j,\n",
-      "             0.33359768+0.j, 0.33421903+0.j, 0.03830802+0.j,\n",
-      "             0.0385713 +0.j, 0.03922179+0.j, 0.03830802+0.j,\n",
-      "             0.04049143+0.j, 0.03843988+0.j, 0.03777593+0.j,\n",
-      "             0.04036627+0.j, 0.04024071+0.j, 0.0380429 +0.j,\n",
-      "             0.03870228+0.j, 0.0371001 +0.j, 0.04111155+0.j,\n",
-      "             0.15474372+0.j, 0.03750706+0.j, 0.0368263 +0.j,\n",
-      "             0.04232454+0.j, 0.0371001 +0.j, 0.04291818+0.j,\n",
-      "             0.03973452+0.j, 0.04160099+0.j, 0.03513869+0.j,\n",
-      "             0.03723625+0.j, 0.03883281+0.j, 0.03843988+0.j,\n",
-      "             0.03870228+0.j, 0.03777593+0.j, 0.03870228+0.j,\n",
-      "             0.03986167+0.j, 0.0380429 +0.j, 0.03542554+0.j,\n",
-      "             0.03960696+0.j, 0.03366779+0.j, 0.04098828+0.j,\n",
-      "             0.03960696+0.j, 0.03947899+0.j, 0.03947899+0.j,\n",
-      "             0.0385713 +0.j, 0.03764174+0.j, 0.03585151+0.j,\n",
-      "             0.03960696+0.j, 0.04086463+0.j, 0.03830802+0.j,\n",
-      "             0.03599239+0.j, 0.03668863+0.j, 0.0380429 +0.j,\n",
-      "             0.0385713 +0.j, 0.0368263 +0.j, 0.03973452+0.j,\n",
-      "             0.04111155+0.j, 0.03764174+0.j, 0.03790965+0.j,\n",
-      "             0.03922179+0.j, 0.03542554+0.j, 0.03723625+0.j,\n",
-      "             0.03484948+0.j, 0.03922179+0.j, 0.04011476+0.j,\n",
-      "             0.0389629 +0.j, 0.03830802+0.j, 0.0371001 +0.j,\n",
-      "             0.03960696+0.j, 0.0393506 +0.j, 0.04147918+0.j,\n",
-      "             0.02401835+0.j, 0.02484681+0.j, 0.02134086+0.j,\n",
-      "             0.02180995+0.j, 0.02380673+0.j, 0.02110241+0.j,\n",
-      "             0.02157668+0.j, 0.02316027+0.j, 0.02337774+0.j,\n",
-      "             0.02604012+0.j, 0.02204075+0.j, 0.20057381+0.j,\n",
-      "             0.02316027+0.j, 0.134596  +0.j, 0.02110241+0.j,\n",
-      "             0.02359321+0.j, 0.02401835+0.j, 0.01986726+0.j,\n",
-      "             0.02157668+0.j, 0.02086123+0.j, 0.02443609+0.j,\n",
-      "             0.02443609+0.j, 0.02037031+0.j, 0.02134086+0.j,\n",
-      "             0.02316027+0.j, 0.02337774+0.j, 0.02134086+0.j,\n",
-      "             0.02337774+0.j, 0.02443609+0.j, 0.02157668+0.j,\n",
-      "             0.02380673+0.j, 0.02359321+0.j, 0.02504964+0.j,\n",
-      "             0.02037031+0.j, 0.02316027+0.j, 0.02294073+0.j,\n",
-      "             0.02443609+0.j, 0.02359321+0.j, 0.02422812+0.j,\n",
-      "             0.02134086+0.j, 0.02316027+0.j, 0.02316027+0.j,\n",
-      "             0.01986726+0.j, 0.02134086+0.j, 0.02157668+0.j,\n",
-      "             0.02401835+0.j, 0.0246423 +0.j, 0.02294073+0.j,\n",
-      "             0.02484681+0.j, 0.02337774+0.j, 0.02380673+0.j,\n",
-      "             0.0196109 +0.j, 0.02294073+0.j, 0.02249524+0.j,\n",
-      "             0.02271908+0.j, 0.02359321+0.j, 0.02401835+0.j,\n",
-      "             0.02316027+0.j, 0.02316027+0.j, 0.02249524+0.j,\n",
-      "             0.02401835+0.j, 0.02294073+0.j, 0.02359321+0.j,\n",
-      "             0.01799619+0.j],\n",
+      "Statevector([0.06091798+0.j, 0.06113919+0.j, 0.06104097+0.j,\n",
+      "             0.06079474+0.j, 0.06166036+0.j, 0.06044833+0.j,\n",
+      "             0.0607536 +0.j, 0.06147357+0.j, 0.06121274+0.j,\n",
+      "             0.06065476+0.j, 0.06110646+0.j, 0.08473488+0.j,\n",
+      "             0.0609836 +0.j, 0.09794386+0.j, 0.06007495+0.j,\n",
+      "             0.0609836 +0.j, 0.06088514+0.j, 0.06206448+0.j,\n",
+      "             0.06077829+0.j, 0.0609836 +0.j, 0.06079474+0.j,\n",
+      "             0.06140033+0.j, 0.06116371+0.j, 0.06044005+0.j,\n",
+      "             0.0617333 +0.j, 0.06153048+0.j, 0.0608194 +0.j,\n",
+      "             0.06073714+0.j, 0.0603407 +0.j, 0.06104097+0.j,\n",
+      "             0.06112283+0.j, 0.06084406+0.j, 0.06108191+0.j,\n",
+      "             0.06126989+0.j, 0.0609754 +0.j, 0.06017475+0.j,\n",
+      "             0.0613433 +0.j, 0.06071244+0.j, 0.06104097+0.j,\n",
+      "             0.06053924+0.j, 0.06079474+0.j, 0.06183041+0.j,\n",
+      "             0.06061353+0.j, 0.06089335+0.j, 0.06178997+0.j,\n",
+      "             0.06087693+0.j, 0.06127805+0.j, 0.06204031+0.j,\n",
+      "             0.06105735+0.j, 0.06088514+0.j, 0.06086871+0.j,\n",
+      "             0.06102459+0.j, 0.06182233+0.j, 0.06161169+0.j,\n",
+      "             0.06086871+0.j, 0.06206448+0.j, 0.06126989+0.j,\n",
+      "             0.06185467+0.j, 0.06030755+0.j, 0.06127805+0.j,\n",
+      "             0.06180615+0.j, 0.06081118+0.j, 0.06086871+0.j,\n",
+      "             0.06006663+0.j, 0.10515227+0.j, 0.10420653+0.j,\n",
+      "             0.10535179+0.j, 0.10515227+0.j, 0.10466136+0.j,\n",
+      "             0.10508568+0.j, 0.10513325+0.j, 0.10544667+0.j,\n",
+      "             0.10450359+0.j, 0.10495237+0.j, 0.10526158+0.j,\n",
+      "             0.16110866+0.j, 0.10500476+0.j, 0.15360664+0.j,\n",
+      "             0.10551777+0.j, 0.10547512+0.j, 0.10456577+0.j,\n",
+      "             0.10447009+0.j, 0.10504285+0.j, 0.1037256 +0.j,\n",
+      "             0.10494284+0.j, 0.10447009+0.j, 0.10592922+0.j,\n",
+      "             0.10455142+0.j, 0.10471867+0.j, 0.10445095+0.j,\n",
+      "             0.1042449 +0.j, 0.10499048+0.j, 0.10510947+0.j,\n",
+      "             0.10471867+0.j, 0.10472345+0.j, 0.10485228+0.j,\n",
+      "             0.10506189+0.j, 0.10355675+0.j, 0.1051903 +0.j,\n",
+      "             0.10525208+0.j, 0.1040865 +0.j, 0.10544193+0.j,\n",
+      "             0.10550355+0.j, 0.10500952+0.j, 0.10373524+0.j,\n",
+      "             0.10489042+0.j, 0.10517129+0.j, 0.10479981+0.j,\n",
+      "             0.10497619+0.j, 0.10512374+0.j, 0.1048332 +0.j,\n",
+      "             0.10523307+0.j, 0.10494284+0.j, 0.10375934+0.j,\n",
+      "             0.1055462 +0.j, 0.10507616+0.j, 0.10489519+0.j,\n",
+      "             0.10468524+0.j, 0.10507616+0.j, 0.10560776+0.j,\n",
+      "             0.10587256+0.j, 0.1048332 +0.j, 0.10452272+0.j,\n",
+      "             0.10390861+0.j, 0.10491902+0.j, 0.1042497 +0.j,\n",
+      "             0.10486181+0.j, 0.10505713+0.j, 0.01204159+0.j,\n",
+      "             0.01212436+0.j, 0.01232883+0.j, 0.01204159+0.j,\n",
+      "             0.01272792+0.j, 0.01208305+0.j, 0.01187434+0.j,\n",
+      "             0.01268858+0.j, 0.01264911+0.j, 0.01195826+0.j,\n",
+      "             0.01216553+0.j, 0.0116619 +0.j, 0.01292285+0.j,\n",
+      "             0.04864155+0.j, 0.01178983+0.j, 0.01157584+0.j,\n",
+      "             0.01330413+0.j, 0.0116619 +0.j, 0.01349074+0.j,\n",
+      "             0.01249   +0.j, 0.0130767 +0.j, 0.01104536+0.j,\n",
+      "             0.0117047 +0.j, 0.01220656+0.j, 0.01208305+0.j,\n",
+      "             0.01216553+0.j, 0.01187434+0.j, 0.01216553+0.j,\n",
+      "             0.01252996+0.j, 0.01195826+0.j, 0.01113553+0.j,\n",
+      "             0.0124499 +0.j, 0.01058301+0.j, 0.0128841 +0.j,\n",
+      "             0.0124499 +0.j, 0.01240967+0.j, 0.01240967+0.j,\n",
+      "             0.01212436+0.j, 0.01183216+0.j, 0.01126943+0.j,\n",
+      "             0.0124499 +0.j, 0.01284523+0.j, 0.01204159+0.j,\n",
+      "             0.01131371+0.j, 0.01153256+0.j, 0.01195826+0.j,\n",
+      "             0.01212436+0.j, 0.01157584+0.j, 0.01249   +0.j,\n",
+      "             0.01292285+0.j, 0.01183216+0.j, 0.01191638+0.j,\n",
+      "             0.01232883+0.j, 0.01113553+0.j, 0.0117047 +0.j,\n",
+      "             0.01095445+0.j, 0.01232883+0.j, 0.01260952+0.j,\n",
+      "             0.01224745+0.j, 0.01204159+0.j, 0.0116619 +0.j,\n",
+      "             0.0124499 +0.j, 0.01236932+0.j, 0.0130384 +0.j,\n",
+      "             0.00754983+0.j, 0.00781025+0.j, 0.0067082 +0.j,\n",
+      "             0.00685565+0.j, 0.00748331+0.j, 0.00663325+0.j,\n",
+      "             0.00678233+0.j, 0.00728011+0.j, 0.00734847+0.j,\n",
+      "             0.00818535+0.j, 0.0069282 +0.j, 0.0630476 +0.j,\n",
+      "             0.00728011+0.j, 0.04230839+0.j, 0.00663325+0.j,\n",
+      "             0.0074162 +0.j, 0.00754983+0.j, 0.006245  +0.j,\n",
+      "             0.00678233+0.j, 0.00655744+0.j, 0.00768115+0.j,\n",
+      "             0.00768115+0.j, 0.00640312+0.j, 0.0067082 +0.j,\n",
+      "             0.00728011+0.j, 0.00734847+0.j, 0.0067082 +0.j,\n",
+      "             0.00734847+0.j, 0.00768115+0.j, 0.00678233+0.j,\n",
+      "             0.00748331+0.j, 0.0074162 +0.j, 0.00787401+0.j,\n",
+      "             0.00640312+0.j, 0.00728011+0.j, 0.0072111 +0.j,\n",
+      "             0.00768115+0.j, 0.0074162 +0.j, 0.00761577+0.j,\n",
+      "             0.0067082 +0.j, 0.00728011+0.j, 0.00728011+0.j,\n",
+      "             0.006245  +0.j, 0.0067082 +0.j, 0.00678233+0.j,\n",
+      "             0.00754983+0.j, 0.00774597+0.j, 0.0072111 +0.j,\n",
+      "             0.00781025+0.j, 0.00734847+0.j, 0.00748331+0.j,\n",
+      "             0.00616441+0.j, 0.0072111 +0.j, 0.00707107+0.j,\n",
+      "             0.00714143+0.j, 0.0074162 +0.j, 0.00754983+0.j,\n",
+      "             0.00728011+0.j, 0.00728011+0.j, 0.00707107+0.j,\n",
+      "             0.00754983+0.j, 0.0072111 +0.j, 0.0074162 +0.j,\n",
+      "             0.00565685+0.j],\n",
       "            dims=(2, 2, 2, 2, 2, 2, 2, 2))\n"
      ]
     }
    ],
    "source": [
-    "# determine if any entries in the dictionary are missing\n",
-    "if len(list(counts.values())) != pow(2, 8):\n",
-    "    counts = correct_counts(counts, 8)\n",
+    "# # determine if any entries in the dictionary are missing\n",
+    "# if len(list(counts.values())) != pow(2, 8):\n",
+    "#     counts = correct_counts(counts, 8)\n",
     "\n",
-    "sv = counts_to_statevector(counts)\n",
-    "sv"
+    "# sv = counts_to_statevector(counts)\n",
+    "# sv"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
