--- a/advectionDiffusion/QuantumD1Q2SVSampling.ipynb
+++ b/advectionDiffusion/QuantumD1Q2SVSampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "f2b5d417",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "8d5d7420",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "(0.6, 0.4)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "88cbf37a",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "4046a942",
    "metadata": {
     "scrolled": false
@@ -212,7 +212,7 @@
        "      ░ └───┘              └───┘ ░                └───┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "934afdb4",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "28b2046d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "91046510",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "9bb64c3a",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "c27d33e9",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "90f5ddee",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "8fddb83d",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "3b9f516f",
    "metadata": {
     "scrolled": true
@@ -438,27 +438,32 @@
     "qc = oneStep(np.arccos(x),np.arccos(y))\n",
     "\n",
     "counts_all = {}\n",
+    "sv_all = {}\n",
     "\n",
     "for i in range(1, iterations):\n",
     "    print(i)\n",
     "    SV = timestep(SV)\n",
     "    counts = simulate_statevector(SV, qc)\n",
     "    counts_all[i] = counts\n",
+    "    sv_all[i] = SV\n",
+    "\n",
     "    save_fig(counts, i, 'sv')\n",
-    "    # counts = simulate_statevector(SV, qc)\n",
-    "    # save_fig(counts, i, 'sv')\n",
+    "\n",
     "    SV = reinit(SV)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "566cfa57",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('data/d1q2_shot_counts.pkl', 'wb') as f:\n",
-    "    pkl.dump(counts_all, f)"
+    "    pkl.dump(counts_all, f)\n",
+    "\n",
+    "with open('data/d1q2_statevectors.pkl', 'wb') as f:\n",
+    "    pkl.dump(sv_all, f)"
    ]
   }
  ],
