--- a/advectionDiffusion/QuantumD1Q2SampleSizeIncr.ipynb
+++ b/advectionDiffusion/QuantumD1Q2SampleSizeIncr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "f2b5d417",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "8d5d7420",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "(0.6, 0.4)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "88cbf37a",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "4046a942",
    "metadata": {
     "scrolled": false
@@ -212,7 +212,7 @@
        "      ░ └───┘              └───┘ ░                └───┘"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "id": "934afdb4",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "28b2046d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "91046510",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "id": "9bb64c3a",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "c27d33e9",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "90f5ddee",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "id": "8fddb83d",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "5bb83049",
    "metadata": {},
    "outputs": [
@@ -383,73 +383,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "3b9f516f",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# hres(initSV)\n",
     "# SAVE FIGURES FOR STATEVECTOR SIMULATION\n",
     "iterations = 50\n",
+    "min_pow = 5\n",
+    "max_pow = 8\n",
     "\n",
     "SV = reset_sv()\n",
     "\n",
@@ -458,29 +403,32 @@
     "counts_all = {}\n",
     "sv_all = {}\n",
     "\n",
-    "for i in range(iterations):\n",
-    "    print(i)\n",
-    "    SV = timestep(SV)\n",
-    "    counts = simulate_statevector(SV, qc)\n",
-    "    counts_all[i] = counts\n",
-    "    sv_all[i] = SV\n",
+    "for j in range(min_pow, max_pow + 1):\n",
+    "    for i in range(iterations + 1):\n",
+    "        SV = timestep(SV)\n",
     "\n",
-    "    save_fig(counts, i, 'sv')\n",
+    "        if i % 10 == 0 and i != 0:\n",
+    "            counts = simulate_statevector(SV, qc, nshots=pow(10, j))\n",
+    "            print(f'Power: {j}...Saving {i}th Iteration SV')\n",
+    "            counts_all[(j, i)] = counts\n",
+    "            sv_all[(j, i)] = SV\n",
     "\n",
-    "    SV = reinit(SV)"
+    "        SV = reinit(SV)\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "id": "566cfa57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/d1q2_shot_counts.pkl', 'wb') as f:\n",
+    "with open('data/d1q2_sampleincr_counts.pkl', 'wb') as f:\n",
     "    pkl.dump(counts_all, f)\n",
     "\n",
-    "with open('data/d1q2_statevectors.pkl', 'wb') as f:\n",
+    "with open('data/d1q2_sampleincr_statevector.pkl', 'wb') as f:\n",
     "    pkl.dump(sv_all, f)"
    ]
   }
