Add sample size increase code for D1Q3

--- a/advectionDiffusion/QuantumD1Q3SampleSizeIncr.ipynb
+++ b/advectionDiffusion/QuantumD1Q3SampleSizeIncr.ipynb
@@ -589,11 +589,11 @@
    "source": [
     "import pickle as pkl\n",
     "\n",
-    "with open('data/d1q3_RMSD_vs_nshots.pkl', 'wb') as f:\n",
-    "    pkl.dump(rmsd_all_iterations, f)\n",
+    "with open('data/d1q3_sampleincr_counts.pkl', 'wb') as f:\n",
+    "    pkl.dump(counts_all, f)\n",
     "\n",
-    "with open('data/d1q3_PD_vs_nshots.pkl', 'wb') as f:\n",
-    "    pkl.dump(pd_all_iterations, f)"
+    "with open('data/d1q3_sampleincr_statevector.pkl', 'wb') as f:\n",
+    "    pkl.dump(sv_all, f)"
    ]
   }
  ],
