Updates to generate graphics

--- a/advectionDiffusion/QuantumD1Q2SampleSizeIncr.ipynb
+++ b/advectionDiffusion/QuantumD1Q2SampleSizeIncr.ipynb
@@ -383,12 +383,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3b9f516f",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power: 5...Saving 10th Iteration SV\n",
+      "Power: 5...Saving 20th Iteration SV\n",
+      "Power: 5...Saving 30th Iteration SV\n",
+      "Power: 5...Saving 40th Iteration SV\n",
+      "Power: 5...Saving 50th Iteration SV\n",
+      "Power: 6...Saving 10th Iteration SV\n",
+      "Power: 6...Saving 20th Iteration SV\n",
+      "Power: 6...Saving 30th Iteration SV\n",
+      "Power: 6...Saving 40th Iteration SV\n",
+      "Power: 6...Saving 50th Iteration SV\n",
+      "Power: 7...Saving 10th Iteration SV\n",
+      "Power: 7...Saving 20th Iteration SV\n",
+      "Power: 7...Saving 30th Iteration SV\n",
+      "Power: 7...Saving 40th Iteration SV\n",
+      "Power: 7...Saving 50th Iteration SV\n",
+      "Power: 8...Saving 10th Iteration SV\n",
+      "Power: 8...Saving 20th Iteration SV\n",
+      "Power: 8...Saving 30th Iteration SV\n",
+      "Power: 8...Saving 40th Iteration SV\n",
+      "Power: 8...Saving 50th Iteration SV\n"
+     ]
+    }
+   ],
    "source": [
     "# hres(initSV)\n",
     "# SAVE FIGURES FOR STATEVECTOR SIMULATION\n",
@@ -420,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "566cfa57",
    "metadata": {},
    "outputs": [],
