set up more generic custom experiment

--- a/twoCircuitLBMParallel.ipynb
+++ b/twoCircuitLBMParallel.ipynb
@@ -703,7 +703,7 @@
    "source": [
     "from qiskit_experiments.framework import ParallelExperiment\n",
     "\n",
-    "from TwoCircExperiment import VortCircExperiment, StreamCircExperiment"
+    "from CustomExperiment import CustomE"
    ]
   },
   {
@@ -717,61 +717,6 @@
     "\n",
     "for i in range(13):\n",
     "    physical_qubits.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "ce1d77b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp1 = VortCircExperiment(physical_qubits)\n",
-    "exp2 = StreamCircExperiment(physical_qubits)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4cfca2be",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(exp2.analysis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "accdb5b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute '_generate_figures'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m parallel_exp \u001b[38;5;241m=\u001b[39m \u001b[43mParallelExperiment\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mexp1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexp2\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbackend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mAerSimulator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/qiskit1/lib/python3.12/site-packages/qiskit_experiments/framework/composite/parallel_experiment.py:71\u001b[0m, in \u001b[0;36mParallelExperiment.__init__\u001b[0;34m(self, experiments, backend, flatten_results, analysis, experiment_type)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m exp \u001b[38;5;129;01min\u001b[39;00m experiments:\n\u001b[1;32m     70\u001b[0m     qubits \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m exp\u001b[38;5;241m.\u001b[39mphysical_qubits\n\u001b[0;32m---> 71\u001b[0m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexperiments\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     73\u001b[0m \u001b[43m    \u001b[49m\u001b[43mqubits\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     74\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbackend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbackend\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     75\u001b[0m \u001b[43m    \u001b[49m\u001b[43manalysis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43manalysis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     76\u001b[0m \u001b[43m    \u001b[49m\u001b[43mflatten_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mflatten_results\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     77\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexperiment_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexperiment_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/qiskit1/lib/python3.12/site-packages/qiskit_experiments/framework/composite/composite_experiment.py:61\u001b[0m, in \u001b[0;36mCompositeExperiment.__init__\u001b[0;34m(self, experiments, physical_qubits, backend, experiment_type, flatten_results, analysis)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_experiments \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(experiments)\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m analysis \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 61\u001b[0m     analysis \u001b[38;5;241m=\u001b[39m \u001b[43mCompositeAnalysis\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     62\u001b[0m \u001b[43m        \u001b[49m\u001b[43m[\u001b[49m\u001b[43mexp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manalysis\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mexp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_experiments\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflatten_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mflatten_results\u001b[49m\n\u001b[1;32m     63\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     65\u001b[0m     physical_qubits,\n\u001b[1;32m     66\u001b[0m     analysis\u001b[38;5;241m=\u001b[39manalysis,\n\u001b[1;32m     67\u001b[0m     backend\u001b[38;5;241m=\u001b[39mbackend,\n\u001b[1;32m     68\u001b[0m     experiment_type\u001b[38;5;241m=\u001b[39mexperiment_type,\n\u001b[1;32m     69\u001b[0m )\n",
-      "File \u001b[0;32m~/anaconda3/envs/qiskit1/lib/python3.12/site-packages/qiskit_experiments/framework/composite/composite_analysis.py:79\u001b[0m, in \u001b[0;36mCompositeAnalysis.__init__\u001b[0;34m(self, analyses, flatten_results, generate_figures)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m flatten_results:\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_flatten_results()\n\u001b[0;32m---> 79\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_set_generate_figures\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgenerate_figures\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/anaconda3/envs/qiskit1/lib/python3.12/site-packages/qiskit_experiments/framework/composite/composite_analysis.py:362\u001b[0m, in \u001b[0;36mCompositeAnalysis._set_generate_figures\u001b[0;34m(self, generate_figures)\u001b[0m\n\u001b[1;32m    360\u001b[0m     analysis\u001b[38;5;241m.\u001b[39m_set_generate_figures(generate_figures)\n\u001b[1;32m    361\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 362\u001b[0m     \u001b[43manalysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_generate_figures\u001b[49m \u001b[38;5;241m=\u001b[39m generate_figures\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute '_generate_figures'"
-     ]
-    }
-   ],
-   "source": [
-    "parallel_exp = ParallelExperiment([exp1, exp2], backend=AerSimulator())"
    ]
   },
   {
