updates to example runs

--- a/twoCircuitLBMParallel.ipynb
+++ b/twoCircuitLBMParallel.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "26fcbeac",
    "metadata": {},
    "outputs": [],
@@ -424,11 +424,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "126413d4",
+   "execution_count": 30,
+   "id": "93a34c30",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: post-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8ec3a3d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1100100000000': 49,\n",
+       " '1101100000000': 64,\n",
+       " '1100000000000': 65,\n",
+       " '0110100000000': 8,\n",
+       " '1001100000000': 52,\n",
+       " '1111100000000': 56,\n",
+       " '1110100000000': 62,\n",
+       " '0000000000000': 5,\n",
+       " '0110000000000': 5,\n",
+       " '1010100000000': 65,\n",
+       " '1110000000000': 59,\n",
+       " '0100100000000': 7,\n",
+       " '1001000000000': 53,\n",
+       " '0011100000000': 4,\n",
+       " '0111100000000': 7,\n",
+       " '0101000000000': 6,\n",
+       " '0100000000000': 9,\n",
+       " '0010100000000': 3,\n",
+       " '1011000000000': 52,\n",
+       " '0111000000000': 7,\n",
+       " '1111000000000': 49,\n",
+       " '0010000000000': 9,\n",
+       " '0000100000000': 12,\n",
+       " '1101000000000': 53,\n",
+       " '0001100000000': 6,\n",
+       " '0001000000000': 2,\n",
+       " '0011000000000': 9,\n",
+       " '1011100000000': 61,\n",
+       " '1010000000000': 47,\n",
+       " '0101100000000': 8,\n",
+       " '1000000000000': 59,\n",
+       " '1000100000000': 71,\n",
+       " '001100000000': 12,\n",
+       " '110100000000': 118,\n",
+       " '110000000000': 116,\n",
+       " '001000000000': 13,\n",
+       " '011100000000': 24,\n",
+       " '101100000000': 120,\n",
+       " '000100000000': 18,\n",
+       " '010100000000': 12,\n",
+       " '000000000000': 15,\n",
+       " '011000000000': 19,\n",
+       " '010000000000': 11,\n",
+       " '111100000000': 106,\n",
+       " '100100000000': 114,\n",
+       " '111000000000': 106,\n",
+       " '101000000000': 101,\n",
+       " '100000000000': 119}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_counts"
+   ]
   }
  ],
  "metadata": {
