temp save results

--- a/twoCircuitLBMParallel.ipynb
+++ b/twoCircuitLBMParallel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "d347141b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,9 @@
     "%matplotlib inline\n",
     "from qiskit import transpile\n",
     "\n",
-    "from qiskit_aer import AerSimulator"
+    "from qiskit_aer import AerSimulator\n",
+    "\n",
+    "import time"
    ]
   },
   {
@@ -318,7 +320,7 @@
     "    vortAr[-1] = bounds[-1]\n",
     "    vortAr[:,0] = bounds[:,0]\n",
     "    vortAr[:,-1] = bounds[:,-1]\n",
-    "    return np.reshape(vortAr,(M,M))\n",
+    "    return np.reshape(vortAr,(M,M)), vort\n",
     "\n",
     "def Stimestep(stream, source):\n",
     "    zeros = np.zeros((M,M))\n",
@@ -330,7 +332,21 @@
     "    streamAr[-1] = 0\n",
     "    streamAr[:,0] = 0\n",
     "    streamAr[:,-1] = 0\n",
-    "    return np.reshape(streamAr,(M,M))"
+    "    return np.reshape(streamAr,(M,M)), stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "11de97d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalized_statevector(SV):\n",
+    "    sv_array = np.array(SV)\n",
+    "    sv_array = sv_array / np.linalg.norm(sv_array)\n",
+    "    SV_normalized = Statevector(sv_array)\n",
+    "    return SV_normalized"
    ]
   },
   {
@@ -347,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "fbba4e44",
    "metadata": {},
    "outputs": [],
@@ -361,6 +377,61 @@
     "allvorts.append(vorticity)\n",
     "\n",
     "streamfunction, vorticity = allstreams[-1], allvorts[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89de8f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get data on \"timings\" for simulation\n",
+    "iterations = 1\n",
+    "\n",
+    "# iteration 0\n",
+    "streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
+    "x, sSV = Stimestep(streamfunction,vorticity)\n",
+    "y, vSV = Vtimestep(vorticity, streamfunction)\n",
+    "allstreams.append(x)\n",
+    "allvorts.append(y)\n",
+    "\n",
+    "timings = {}\n",
+    "nshots = 100_000\n",
+    "\n",
+    "for i in range(1, iterations + 1):\n",
+    "    sCirc = streamCirc()\n",
+    "    sQC = QuantumCircuit(sCirc.num_qubits)\n",
+    "    state = normalized_statevector(sSV)\n",
+    "    sQC.prepare_state(state)\n",
+    "    sQC.append(sCirc, range(sCirc.num_qubits))\n",
+    "    stream_physical_qubits = [i for i in range(0, sQC.num_qubits)]\n",
+    "    exp1 = CustomExperiment(sQC, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
+    "\n",
+    "    base = len(stream_physical_qubits)\n",
+    "\n",
+    "    vCirc = vortCirc(streamfunction)\n",
+    "    vQC = QuantumCircuit(vCirc.num_qubits)\n",
+    "    state = normalized_statevector(vSV)\n",
+    "    vQC.prepare_state(state)\n",
+    "    vQC.append(sCirc, range(sCirc.num_qubits))\n",
+    "    vorticity_physical_qubits = [i for i in range(base, base + vQC.num_qubits)]\n",
+    "    exp2 = CustomExperiment(vQC, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
+    "\n",
+    "    experiments = [exp1, exp2]\n",
+    "    parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
+    "\n",
+    "    start = time.process_time\n",
+    "    ideal = parallel_exp.run().block_for_results()\n",
+    "    end = time.process_time\n",
+    "\n",
+    "    timings[i] = start - end\n",
+    "\n",
+    "    streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
+    "    x, sSV = Stimestep(streamfunction,vorticity)\n",
+    "    y, vSV = Vtimestep(vorticity, streamfunction)\n",
+    "    allstreams.append(x)\n",
+    "    allvorts.append(y)"
    ]
   },
   {
@@ -381,123 +452,54 @@
     }
    ],
    "source": [
-    "sCirc = streamCirc()\n",
-    "stream_physical_qubits = [i for i in range(0, sCirc.num_qubits)]\n",
-    "exp1 = CustomExperiment(sCirc, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits)\n",
+    "# nshots = 100_000\n",
     "\n",
-    "base = len(stream_physical_qubits)\n",
+    "# sCirc = streamCirc()\n",
+    "# stream_physical_qubits = [i for i in range(0, sCirc.num_qubits)]\n",
+    "# exp1 = CustomExperiment(sCirc, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
     "\n",
-    "vCirc = vortCirc(streamfunction)\n",
-    "vorticity_physical_qubits = [i for i in range(base, base + vCirc.num_qubits)]\n",
-    "exp2 = CustomExperiment(vCirc, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits)"
+    "# base = len(stream_physical_qubits)\n",
+    "\n",
+    "# vCirc = vortCirc(streamfunction)\n",
+    "# vorticity_physical_qubits = [i for i in range(base, base + vCirc.num_qubits)]\n",
+    "# exp2 = CustomExperiment(vCirc, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
+    "\n",
+    "# experiments = [exp1, exp2]\n",
+    "# parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
+    "# ideal = parallel_exp.run().block_for_results()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2bf30bc4",
+   "execution_count": 21,
+   "id": "16bc1af1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiments = [exp1, exp2]"
+    "import pickle as pkl\n",
+    "\n",
+    "with open(\"data/twoCircuitParallel.pkl\", \"wb\") as f:\n",
+    "    pkl.dump(ideal, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "982f2292",
+   "execution_count": 18,
+   "id": "bdea52ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())"
+    "# TODO: save files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "26fcbeac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ideal = parallel_exp.run().block_for_results()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "93a34c30",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: post-processing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "8ec3a3d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'1100100000000': 49,\n",
-       " '1101100000000': 64,\n",
-       " '1100000000000': 65,\n",
-       " '0110100000000': 8,\n",
-       " '1001100000000': 52,\n",
-       " '1111100000000': 56,\n",
-       " '1110100000000': 62,\n",
-       " '0000000000000': 5,\n",
-       " '0110000000000': 5,\n",
-       " '1010100000000': 65,\n",
-       " '1110000000000': 59,\n",
-       " '0100100000000': 7,\n",
-       " '1001000000000': 53,\n",
-       " '0011100000000': 4,\n",
-       " '0111100000000': 7,\n",
-       " '0101000000000': 6,\n",
-       " '0100000000000': 9,\n",
-       " '0010100000000': 3,\n",
-       " '1011000000000': 52,\n",
-       " '0111000000000': 7,\n",
-       " '1111000000000': 49,\n",
-       " '0010000000000': 9,\n",
-       " '0000100000000': 12,\n",
-       " '1101000000000': 53,\n",
-       " '0001100000000': 6,\n",
-       " '0001000000000': 2,\n",
-       " '0011000000000': 9,\n",
-       " '1011100000000': 61,\n",
-       " '1010000000000': 47,\n",
-       " '0101100000000': 8,\n",
-       " '1000000000000': 59,\n",
-       " '1000100000000': 71,\n",
-       " '001100000000': 12,\n",
-       " '110100000000': 118,\n",
-       " '110000000000': 116,\n",
-       " '001000000000': 13,\n",
-       " '011100000000': 24,\n",
-       " '101100000000': 120,\n",
-       " '000100000000': 18,\n",
-       " '010100000000': 12,\n",
-       " '000000000000': 15,\n",
-       " '011000000000': 19,\n",
-       " '010000000000': 11,\n",
-       " '111100000000': 106,\n",
-       " '100100000000': 114,\n",
-       " '111000000000': 106,\n",
-       " '101000000000': 101,\n",
-       " '100000000000': 119}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_counts"
    ]
   }
  ],
