temp save results

--- a/twoCircuitLBMParallel.ipynb
+++ b/twoCircuitLBMParallel.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "31906c22",
    "metadata": {},
    "outputs": [],
@@ -337,14 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "11de97d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalized_statevector(SV):\n",
     "    sv_array = np.array(SV)\n",
-    "    sv_array = sv_array / np.linalg.norm(sv_array)\n",
+    "    norm = np.linalg.norm(sv_array)\n",
+    "    if norm == 0:\n",
+    "        print(\"Zero!\")\n",
+    "    sv_array = sv_array / norm\n",
     "    SV_normalized = Statevector(sv_array)\n",
     "    return SV_normalized"
    ]
@@ -381,61 +384,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89de8f66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get data on \"timings\" for simulation\n",
-    "iterations = 1\n",
-    "\n",
-    "# iteration 0\n",
-    "streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
-    "x, sSV = Stimestep(streamfunction,vorticity)\n",
-    "y, vSV = Vtimestep(vorticity, streamfunction)\n",
-    "allstreams.append(x)\n",
-    "allvorts.append(y)\n",
-    "\n",
-    "timings = {}\n",
-    "nshots = 100_000\n",
-    "\n",
-    "for i in range(1, iterations + 1):\n",
-    "    sCirc = streamCirc()\n",
-    "    sQC = QuantumCircuit(sCirc.num_qubits)\n",
-    "    state = normalized_statevector(sSV)\n",
-    "    sQC.prepare_state(state)\n",
-    "    sQC.append(sCirc, range(sCirc.num_qubits))\n",
-    "    stream_physical_qubits = [i for i in range(0, sQC.num_qubits)]\n",
-    "    exp1 = CustomExperiment(sQC, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
-    "\n",
-    "    base = len(stream_physical_qubits)\n",
-    "\n",
-    "    vCirc = vortCirc(streamfunction)\n",
-    "    vQC = QuantumCircuit(vCirc.num_qubits)\n",
-    "    state = normalized_statevector(vSV)\n",
-    "    vQC.prepare_state(state)\n",
-    "    vQC.append(sCirc, range(sCirc.num_qubits))\n",
-    "    vorticity_physical_qubits = [i for i in range(base, base + vQC.num_qubits)]\n",
-    "    exp2 = CustomExperiment(vQC, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
-    "\n",
-    "    experiments = [exp1, exp2]\n",
-    "    parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
-    "\n",
-    "    start = time.process_time\n",
-    "    ideal = parallel_exp.run().block_for_results()\n",
-    "    end = time.process_time\n",
-    "\n",
-    "    timings[i] = start - end\n",
-    "\n",
-    "    streamfunction, vorticity = allstreams[-1], allvorts[-1]\n",
-    "    x, sSV = Stimestep(streamfunction,vorticity)\n",
-    "    y, vSV = Vtimestep(vorticity, streamfunction)\n",
-    "    allstreams.append(x)\n",
-    "    allvorts.append(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "bf194804",
    "metadata": {},
@@ -452,21 +400,21 @@
     }
    ],
    "source": [
-    "# nshots = 100_000\n",
+    "nshots = 100_000\n",
     "\n",
-    "# sCirc = streamCirc()\n",
-    "# stream_physical_qubits = [i for i in range(0, sCirc.num_qubits)]\n",
-    "# exp1 = CustomExperiment(sCirc, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
+    "sCirc = streamCirc()\n",
+    "stream_physical_qubits = [i for i in range(0, sCirc.num_qubits)]\n",
+    "exp1 = CustomExperiment(sCirc, 'stream', backend=AerSimulator(), physical_qubits=stream_physical_qubits, num_samples=nshots)\n",
     "\n",
-    "# base = len(stream_physical_qubits)\n",
+    "base = len(stream_physical_qubits)\n",
     "\n",
-    "# vCirc = vortCirc(streamfunction)\n",
-    "# vorticity_physical_qubits = [i for i in range(base, base + vCirc.num_qubits)]\n",
-    "# exp2 = CustomExperiment(vCirc, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
+    "vCirc = vortCirc(streamfunction)\n",
+    "vorticity_physical_qubits = [i for i in range(base, base + vCirc.num_qubits)]\n",
+    "exp2 = CustomExperiment(vCirc, 'vorticity', backend=AerSimulator(), physical_qubits=vorticity_physical_qubits, num_samples=nshots)\n",
     "\n",
-    "# experiments = [exp1, exp2]\n",
-    "# parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
-    "# ideal = parallel_exp.run().block_for_results()"
+    "experiments = [exp1, exp2]\n",
+    "parallel_exp = ParallelExperiment(experiments, backend=AerSimulator())\n",
+    "ideal = parallel_exp.run().block_for_results()"
    ]
   },
   {
